--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.469.0",
     "next": "15.1.1",
     "or": "^0.2.0",
     "react": "^18",
