--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.469.0",
     "next": "15.1.1",
     "or": "^0.2.0",
+    "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-slot": "^0.1.2",
