--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "react-slot": "^0.1.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
