--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_BASE_URL=http://localhost:3000/api/auth/callback
 UPSTOX_CLIENT_ID=b15dbc6d-634a-4806-b477-7efd64a2700e
 UPSTOX_CLIENT_SECRET=pzgiur2jjp
+REACT_APP_REDIS_HOST=saved-dassie-60359.upstash.io
+REACT_APP_REDIS_PORT=6379
+REACT_APP_REDIS_PASSWORD=AevHAAIjcDE5ZjcwOWVlMmQzNWI0MmE5YTA0NzgxN2VhN2E0MTNjZHAxMA
