updates for deploy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,9 +23,11 @@
     ],
     "paths": {
       "@/*": [
-        "./*"
+        "./*",
+        "./app/*"
       ]
     },
+    "baseUrl": ".",
     "target": "ES2017"
   },
   "include": [
