--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^20.11.24",
+    "@types/react": "^18.2.17",
     "@types/react-dom": "^18",
-    "typescript": "^5"
+    "eslint": "^9.19.0",
+    "eslint-config-next": "^15.1.6",
+    "typescript": "^5.3.3"
   }
 }
