--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BASE_URL=http://localhost:3000/api/auth/callback
+NEXT_PUBLIC_BASE_URL=http://localhost:8080
 UPSTOX_CLIENT_ID=b15dbc6d-634a-4806-b477-7efd64a2700e
 UPSTOX_CLIENT_SECRET=pzgiur2jjp
 REACT_APP_REDIS_HOST=saved-dassie-60359.upstash.io
