--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@stomp/stompjs": "^7.1.1",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.1",
@@ -20,6 +21,8 @@
     "react-icons": "^5.4.0",
     "react-slot": "^0.1.2",
     "shadcn-ui": "^0.9.4",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
@@ -28,6 +31,7 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18",
+    "@types/sockjs-client": "^1.5.4",
     "eslint": "^9.19.0",
     "eslint-config-next": "^15.1.6",
     "typescript": "^5.3.3"
