--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-#NEXT_PUBLIC_BASE_URL=http://localhost:8090
-NEXT_PUBLIC_BASE_URL=https://firmly-flexible-quagga.ngrok-free.app
-UPSTOX_CLIENT_ID=b15dbc6d-634a-4806-b477-7efd64a2700e
-UPSTOX_CLIENT_SECRET=pzgiur2jjp
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:5050
+NEXT_UPSTOX_REDIRECT_URL=http://localhost:5050/api/auth/callback
+UPSTOX_CLIENT_ID=693b6b9e-5585-4565-9755-2540cf0b33b5
+UPSTOX_CLIENT_SECRET=9ewix3clyu
 REACT_APP_REDIS_HOST=saved-dassie-60359.upstash.io
 REACT_APP_REDIS_PORT=6379
 REACT_APP_REDIS_PASSWORD=AevHAAIjcDE5ZjcwOWVlMmQzNWI0MmE5YTA0NzgxN2VhN2E0MTNjZHAxMA
