--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@stomp/stompjs": "^7.1.1",
     "class-variance-authority": "^0.7.1",
+    "lightweight-charts": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.1",
     "or": "^0.2.0",
@@ -19,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
+    "react-rnd": "^10.5.2",
     "react-slot": "^0.1.2",
     "shadcn-ui": "^0.9.4",
     "sockjs-client": "^1.6.1",
