--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
 NEXT_PUBLIC_FRONTEND_URL=http://localhost:5050
 NEXT_UPSTOX_REDIRECT_URL=http://localhost:5050/api/auth/callback
-UPSTOX_CLIENT_ID=693b6b9e-5585-4565-9755-2540cf0b33b5
+NEXT_PUBLIC_UPSTOX_CLIENT_ID=693b6b9e-5585-4565-9755-2540cf0b33b5
 UPSTOX_CLIENT_SECRET=9ewix3clyu
 REACT_APP_REDIS_HOST=saved-dassie-60359.upstash.io
 REACT_APP_REDIS_PORT=6379
 REACT_APP_REDIS_PASSWORD=AevHAAIjcDE5ZjcwOWVlMmQzNWI0MmE5YTA0NzgxN2VhN2E0MTNjZHAxMA
+NEXT_PUBLIC_UPSTOX_API_URL=https://api-v2.upstox.com
+NEXT_PUBLIC_WS_PATH=/topic/data
+NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
