--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# local env files
+.env*.local
+
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
+next-env.d.ts
+.env
 .vscode/extensions.json
+.env
+.env
