Update PIN validation and WS path, minor code cleanup
Expanded PIN validation to accept 4-6 digits and updated related UI text in the auth page. Changed NEXT_PUBLIC_WS_PATH in .env from '/topic/data' to '/ws'. Commented out updateLiveSet calls in CompanyCards, removed a debugger statement in WatchLists, and added minor whitespace in WebSocket and useSocketConnectionStatus for readability.

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ REACT_APP_REDIS_HOST=saved-dassie-60359.upstash.io
 REACT_APP_REDIS_PORT=6379
 REACT_APP_REDIS_PASSWORD=AevHAAIjcDE5ZjcwOWVlMmQzNWI0MmE5YTA0NzgxN2VhN2E0MTNjZHAxMA
 NEXT_PUBLIC_UPSTOX_API_URL=https://api-v2.upstox.com
-NEXT_PUBLIC_WS_PATH=/topic/data
+NEXT_PUBLIC_WS_PATH=/ws
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
