--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
     "@stomp/stompjs": "^7.1.1",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "lightweight-charts": "^4.1.0",
     "lucide-react": "^0.469.0",
@@ -19,6 +20,7 @@
     "radix-ui": "^1.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-rnd": "^10.5.2",
     "react-slot": "^0.1.2",
@@ -27,7 +29,8 @@
     "stompjs": "^2.3.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "technicalindicators": "^3.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
