--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "lightweight-charts": "^4.1.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.1",
