--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ REACT_APP_REDIS_PORT=6379
 REACT_APP_REDIS_PASSWORD=AevHAAIjcDE5ZjcwOWVlMmQzNWI0MmE5YTA0NzgxN2VhN2E0MTNjZHAxMA
 NEXT_PUBLIC_UPSTOX_API_URL=https://api-v2.upstox.com
 NEXT_PUBLIC_WS_PATH=/ws
+#NEXT_PUBLIC_BACKEND_URL=https://api.algo-horizon.store
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
