--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "stompjs": "^2.3.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
-    "tailwindcss-animate": "^1.0.7",
-    "technicalindicators": "^3.1.0"
+  "tailwindcss-animate": "^1.0.7",
+  "technicalindicators": "^3.1.0",
+  "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
