--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@stomp/stompjs": "^7.1.1",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -24,15 +27,14 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-rnd": "^10.5.2",
-    "react-slot": "^0.1.2",
     "shadcn-ui": "^0.9.4",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.17",
-  "tailwindcss-animate": "^1.0.7",
-  "technicalindicators": "^3.1.0",
-  "xlsx": "^0.18.5"
+    "tailwindcss-animate": "^1.0.7",
+    "technicalindicators": "^3.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
