Enhance admin actions with highs/lows batch processing
Replaces the old admin actions page with a new implementation that supports batch processing of highs and lows data for selected alphabets and timeframes. Adds progress tracking, backend API route for saving processed data, and utilities for fetching key mappings. Updates OHLC chart and Upstox API utilities to support combined intraday and historical data fetching. Refactors code for better modularity and error handling.

--- a/.env
+++ b/.env
@@ -9,3 +9,4 @@ NEXT_PUBLIC_UPSTOX_API_URL=https://api-v2.upstox.com
 NEXT_PUBLIC_WS_PATH=/ws
 #NEXT_PUBLIC_BACKEND_URL=https://api.algo-horizon.store
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
+NEXT_PUBLIC_UPSTOX_API_KEY=alpha
