feat: implement Upstox OAuth flow with user-specific configurations and management page

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 NEXT_PUBLIC_FRONTEND_URL=http://localhost:5050
-NEXT_UPSTOX_REDIRECT_URL=http://localhost:5050/api/auth/callback
-NEXT_PUBLIC_UPSTOX_CLIENT_ID=693b6b9e-5585-4565-9755-2540cf0b33b5
+UPSTOX_CLIENT_ID=693b6b9e-5585-4565-9755-2540cf0b33b5
 UPSTOX_CLIENT_SECRET=9ewix3clyu
 REACT_APP_REDIS_HOST=saved-dassie-60359.upstash.io
 REACT_APP_REDIS_PORT=6379
@@ -10,3 +9,32 @@ NEXT_PUBLIC_WS_PATH=/ws
 #NEXT_PUBLIC_BACKEND_URL=https://api.algo-horizon.store
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
 NEXT_PUBLIC_UPSTOX_API_KEY=alpha
+
+UPSTOX_SANDBOX=https://api-sandbox.upstox.com/v3
+UPSTOX_PROD=https://api-hft.upstox.com/v3
+
+
+#### ABRAR_PROD
+UPSTOX_REDIRECT_URL_8885615779=https://algo-horizon.vercel.app/api/auth/8885615779/callback
+UPSTOX_CLIENT_ID_8885615779=693b6b9e-5585-4565-9755-2540cf0b33b5
+UPSTOX_CLIENT_SECRET_8885615779=9ewix3clyu
+#ABRAR_LOCAL
+UPSTOX_REDIRECT_URL_8885615779=http://localhost:5050/api/auth/8885615779/callback
+UPSTOX_CLIENT_ID_8885615779=c49eb663-015c-4768-9bbd-fb49ac3d5ce4
+UPSTOX_CLIENT_SECRET_8885615779=0btbqjwuy0
+
+#nawaz
+UPSTOX_SANDBOX_REDIRECT_URL_8008752702=https://algo-horizon.vercel.app/api/auth/8008752702/callback
+UPSTOX_SANDBOX_CLIENT_ID_8008752702=93f36a27-8771-4ee7-99a0-b1d48c4fbc8e
+UPSTOX_SANDBOX_CLIENT_SECRET_8008752702=jr4q5rnj5n
+
+
+UPSTOX_REDIRECT_URL_888=https://algo-horizon.vercel.app/api/auth/888/callback
+UPSTOX_CLIENT_ID_888=693b6b9e-5585-4565-9755-2540cf0b33b5
+UPSTOX_CLIENT_SECRET_888=9ewix3clyu
+
+
+#### ABRAR - LOCAL
+#UPSTOX_REDIRECT_URL_8885615779=http://localhost:5050/api/auth/8885615779/callback
+#UPSTOX_CLIENT_ID_8885615779=693b6b9e-5585-4565-9755-2540cf0b33b5
+#UPSTOX_CLIENT_SECRET_8885615779=9ewix3clyu
