feat: implement OTP generation and WhatsApp integration for user authentication

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ NEXT_PUBLIC_UPSTOX_API_KEY=alpha
 UPSTOX_SANDBOX=https://api-sandbox.upstox.com/v3
 UPSTOX_PROD=https://api-hft.upstox.com/v3
 
+WHATSAPP_API_URL=http://localhost:3000/send-otp
 
 #### ABRAR_PROD
 UPSTOX_REDIRECT_URL_8885615779=https://algo-horizon.vercel.app/api/auth/8885615779/callback
