--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -26,6 +27,7 @@
     "or": "^0.2.0",
     "radix-ui": "^1.0.1",
     "react": "^18",
+    "react-day-picker": "^9.11.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
