--- a/.env
+++ b/.env
@@ -13,7 +13,9 @@ NEXT_PUBLIC_UPSTOX_API_KEY=alpha
 UPSTOX_SANDBOX=https://api-sandbox.upstox.com/v3
 UPSTOX_PROD=https://api-hft.upstox.com/v3
 
-WHATSAPP_API_URL=http://localhost:3000/send-otp
+WHATSAPP_API_URL=https://algo-horizon.duckdns.org:3000
+
+NEXT_PUBLIC_WHATSAPP_API_URL=https://algo-horizon.duckdns.org:3000
 
 #### ABRAR_PROD
 UPSTOX_REDIRECT_URL_8885615779=https://algo-horizon.vercel.app/api/auth/8885615779/callback
