--- a/.env
+++ b/.env
@@ -14,14 +14,15 @@ UPSTOX_SANDBOX=https://api-sandbox.upstox.com/v3
 UPSTOX_PROD=https://api-hft.upstox.com/v3
 
 
-#### ABRAR_PROD
-UPSTOX_REDIRECT_URL_8885615779=https://algo-horizon.vercel.app/api/auth/8885615779/callback
-UPSTOX_CLIENT_ID_8885615779=693b6b9e-5585-4565-9755-2540cf0b33b5
-UPSTOX_CLIENT_SECRET_8885615779=9ewix3clyu
-#ABRAR_LOCAL
-UPSTOX_REDIRECT_URL_8885615779=http://localhost:5050/api/auth/8885615779/callback
-UPSTOX_CLIENT_ID_8885615779=c49eb663-015c-4768-9bbd-fb49ac3d5ce4
-UPSTOX_CLIENT_SECRET_8885615779=0btbqjwuy0
+#### ABRAR - PRODUCTION ENVIRONMENT
+UPSTOX_REDIRECT_URL_8885615779_PROD=https://algo-horizon.vercel.app/api/auth/8885615779/callback
+UPSTOX_CLIENT_ID_8885615779_PROD=693b6b9e-5585-4565-9755-2540cf0b33b5
+UPSTOX_CLIENT_SECRET_8885615779_PROD=9ewix3clyu
+
+#### ABRAR - LOCAL DEVELOPMENT ENVIRONMENT  
+UPSTOX_REDIRECT_URL_8885615779_LOCAL=http://localhost:5050/api/auth/8885615779/callback
+UPSTOX_CLIENT_ID_8885615779_LOCAL=c49eb663-015c-4768-9bbd-fb49ac3d5ce4
+UPSTOX_CLIENT_SECRET_8885615779_LOCAL=0btbqjwuy0
 
 #nawaz
 UPSTOX_SANDBOX_REDIRECT_URL_8008752702=https://algo-horizon.vercel.app/api/auth/8008752702/callback
