--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "technicalindicators": "^3.1.0",
+    "upstox-js-sdk": "^2.20.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
