Add strykeType filter and UI improvements
Introduces OLD/NEW strykeType filtering and toggles in strike analysis, updates the analysis table and form UI, and adds a new Upstox account (Abrar) with related mapping. Removes the obsolete Upstox order API route, adds an Upstox image, and enhances the Upstox page with trade history, disclosed quantity, and batch order support.

--- a/.env
+++ b/.env
@@ -13,6 +13,8 @@ NEXT_PUBLIC_UPSTOX_API_KEY=alpha
 UPSTOX_SANDBOX=https://api-sandbox.upstox.com/v3
 UPSTOX_PROD=https://api-hft.upstox.com/v3
 
+SANDBOX=true
+
 
 #### ABRAR - PRODUCTION ENVIRONMENT
 UPSTOX_REDIRECT_URL_8885615779_PROD=https://algo-horizon.vercel.app/api/auth/8885615779/callback
