feat: enhance Upstox authentication flow with dynamic URL handling and improved error logging

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ REACT_APP_REDIS_PORT=6379
 REACT_APP_REDIS_PASSWORD=AevHAAIjcDE5ZjcwOWVlMmQzNWI0MmE5YTA0NzgxN2VhN2E0MTNjZHAxMA
 NEXT_PUBLIC_UPSTOX_API_URL=https://api-v2.upstox.com
 NEXT_PUBLIC_WS_PATH=/ws
-#NEXT_PUBLIC_BACKEND_URL=https://api.algo-horizon.store
+NEXT_PUBLIC_BACKEND_URL_PROD=https://api.algo-horizon.store
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
 NEXT_PUBLIC_UPSTOX_API_KEY=alpha
 
@@ -18,14 +18,10 @@ SANDBOX=true
 
 
 #### ABRAR - PRODUCTION ENVIRONMENT
-UPSTOX_REDIRECT_URL_8885615779_PROD=https://algo-horizon.vercel.app/api/auth/8885615779/callback
-UPSTOX_CLIENT_ID_8885615779_PROD=693b6b9e-5585-4565-9755-2540cf0b33b5
-UPSTOX_CLIENT_SECRET_8885615779_PROD=9ewix3clyu
+UPSTOX_REDIRECT_URL_8885615779=https://algo-horizon.vercel.app/api/auth/8885615779/callback
+UPSTOX_CLIENT_ID_8885615779=8e7b133a-35ec-4761-9842-39b844da72e1
+UPSTOX_CLIENT_SECRET_8885615779=7oxs8q3tkf
 
-#### ABRAR - LOCAL DEVELOPMENT ENVIRONMENT  
-UPSTOX_REDIRECT_URL_8885615779_LOCAL=http://localhost:5050/api/auth/8885615779/callback
-UPSTOX_CLIENT_ID_8885615779_LOCAL=c49eb663-015c-4768-9bbd-fb49ac3d5ce4
-UPSTOX_CLIENT_SECRET_8885615779_LOCAL=0btbqjwuy0
 
 #nawaz
 UPSTOX_SANDBOX_REDIRECT_URL_8008752702=https://algo-horizon.vercel.app/api/auth/8008752702/callback
