feat: implement Gmail account management with validation and saving functionality

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ NEXT_PUBLIC_UPSTOX_API_KEY=alpha
 
 UPSTOX_SANDBOX=https://api-sandbox.upstox.com/v3
 UPSTOX_PROD=https://api-hft.upstox.com/v3
+NEXT_PUBLIC_GMAIL_OAUTH_URL=http://gmail.algo-horizon.store:4000/oauth/setup
 
 NEXT_PUBLIC_WHATSAPP_API_URL=https://whatsapp.algo-horizon.store
 SANDBOX=true
