fix: update Upstox redirect URL and client credentials for local development

--- a/.env
+++ b/.env
@@ -19,9 +19,9 @@ SANDBOX=true
 
 
 #### ABRAR - PRODUCTION ENVIRONMENT
-UPSTOX_REDIRECT_URL_8885615779=https://algo-horizon.vercel.app/api/auth/8885615779/callback
-UPSTOX_CLIENT_ID_8885615779=8e7b133a-35ec-4761-9842-39b844da72e1
-UPSTOX_CLIENT_SECRET_8885615779=7oxs8q3tkf
+UPSTOX_REDIRECT_URL_8885615779=http://localhost:5050/api/auth/8885615779/callback
+UPSTOX_CLIENT_ID_8885615779=e9284c15-a73c-4b86-812e-d8a49d76000b
+UPSTOX_CLIENT_SECRET_8885615779=n6qj6vvmca
 
 
 #nawaz
