--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reduxjs/toolkit": "^2.10.1",
     "@stomp/stompjs": "^7.1.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "lightweight-charts": "^4.1.0",
     "lucide-react": "^0.469.0",
-    "next": "15.1.1",
+    "next": "^16.0.3",
     "or": "^0.2.0",
     "radix-ui": "^1.0.1",
-    "react": "^18",
+    "react": "^19",
     "react-day-picker": "^9.11.0",
-    "react-dom": "^18",
+    "react-dom": "^19",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "react-rnd": "^10.5.2",
     "shadcn-ui": "^0.9.4",
     "sockjs-client": "^1.6.1",
@@ -46,9 +46,11 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@types/node": "^20.19.23",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/sockjs-client": "^1.5.4",
     "eslint": "^9.19.0",
-    "eslint-config-next": "^15.1.6"
+    "eslint-config-next": "^16.0.3"
   }
 }
