--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
   },
   "devDependencies": {
     "@types/node": "^22",
-    "@types/react": "19.0.7",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/sockjs-client": "^1.5.4",
     "eslint": "^9.19.0",
     "eslint-config-next": "^16.0.3"
