Refactor OHLCChartDemo component: remove unused API key handling, clean up state management, and enhance UI responsiveness. Update Upstox API parameters to make apiKey optional. Change JSX setting in tsconfig for better compatibility.

--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ REACT_APP_REDIS_PORT=6379
 REACT_APP_REDIS_PASSWORD=AevHAAIjcDE5ZjcwOWVlMmQzNWI0MmE5YTA0NzgxN2VhN2E0MTNjZHAxMA
 NEXT_PUBLIC_UPSTOX_API_URL=https://api-v2.upstox.com
 NEXT_PUBLIC_WS_PATH=/ws
-NEXT_PUBLIC_BACKEND_URL_PROD=https://api.algo-horizon.store
-NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
+NEXT_PUBLIC_BACKEND_URL=https://algo-horizon.store
+##NEXT_PUBLIC_BACKEND_URL=http://localhost:8090
 NEXT_PUBLIC_UPSTOX_API_KEY=alpha
 
 UPSTOX_SANDBOX=https://api-sandbox.upstox.com/v3
